syntax = "proto3";
package POGOProtos.Data.Redeem;

message PokeCandy {
	fixed64 pokemon_id = 1;
	int32 candy_count = 2;
}
