syntax = "proto3";
package POGOProtos.Enums;

enum BuddySize {
	BUDDY_MEDIUM = 0;
	BUDDY_SHOULDER = 1;
	BUDDY_BIG = 2;
	BUDDY_FLYING = 3;
	BUDDY_BABY = 4;
}
